# PoissonSolver3D

./: CMakeLists.txt  CMakeLists.txt.temp  PETUNJUKPENGGUNAAN.md  README.md
doc_doxygen/html/: index.html
doc_doxygen/latex/: refman.tex
docs/: Doxyfile.in
example/: CMakeLists.txt  PoissonSolver3DGPUTest.cpp  PoissonSolver3DGPUTest.h  poissonsolver.test.cpp
example/test/: CMakeCache.txt
gpuapp/: CMakeLists.txt  PoissonSolver3DGPUTest.C  PoissonSolver3DGPUTest.h
gpulib/: PoissonSolver3DGPU.cu  PoissonSolver3DGPU.h
interface/: CMakeLists.txt  PoissonSolver3DCylindricalGPU.cxx  PoissonSolver3DCylindricalGPU.h
kernel/: PoissonSolver3DGPU.cu  PoissonSolver3DGPU.h
